Extraer la data, mostrar  pagina de notas,

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,103 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<ConsultarNotasRecoleccion.Models.Calificaciones>
+@{
+    ViewData["Title"] = "Notas";
+    var suma = Model.Where(y => y.CodigoCategoria != 0).Sum(x => x.PsPrimeraEvalucionParcial).ToString("N");
+    var promedio = Math.Round(Convert.ToDecimal(suma) / Model.Where(x => x.CodigoCategoria != 0).Count(), 2);
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="card">
+        <div class="card-header text-center">
+            <h2>CENTRO ESCOLAR LA RECOLECCION</h2>
+            <h3>1880 22 DE NOVIEMBRE - 2023</h3>
+            <h3>BOLETIN</h3>
+            <h5>AÑO LECTIVO @Model[0].AñoLectivo</h5>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col col-4">
+                    <b> CODIGO: </b>@Model[0].CodigoAlumna
+                </div>
+                <div class="col col-4">
+                    ALUMNA: @Model[0].Alumnas
+                </div>
+                <div class="col col-4">
+                    GRADO: @Model[0].Grado
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-6">
+                    PROFESOR GUIA: @Model[0].ProfesorGuia
+                </div>
+                <div class="col col-6" style="text-align:right;">
+                    SECCION: @Model[0].Aula
+                </div>
+            </div>
+            <div class="row">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                ASIGNATURAS
+                            </th>
+                            <th>
+                                IB
+                            </th>
+                            <th>
+                                Cat
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            if (item.CodigoCategoria != 0)
+                            {
+                                <tr>
+                                    <td>
+                                        @item.Asignatura
+                                    </td>
+                                    <td>
+                                        @item.PsPrimeraEvalucionParcial
+                                    </td>
+                                    <td>
+                                        @item.Cat1p
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td>PROMEDIO</td>
+                            <td>@promedio %</td>
+                        </tr>
+                    </tfoot>
+                </table>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                ASPECTOS OBSERVABLES
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            if (item.CodigoCategoria == 0)
+                            {
+                                <tr>
+                                    <td>
+                                        @item.Asignatura
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
