--- a/Views/Acceso/Login.cshtml
+++ b/Views/Acceso/Login.cshtml
@@ -23,17 +23,17 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form action="@Url.Action("LoginAccess","Acceso")" method="post">
-						<div class="input-group mb-3">
+						@* <div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
 							<input type="text" name="Correo" class="form-control input_user" value="" placeholder="Usuario">
-						</div>
+						</div> *@
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-							<input type="password" name="Clave" class="form-control input_pass" value="" placeholder="Codigo de Alumno(a)">
+							<input type="text" name="Clave" class="form-control input_pass" value="" placeholder="Codigo de Alumno(a)">
 						</div>
 						
 						<div class="d-flex justify-content-center mt-3 login_container">
