--- a/Views/Acceso/Login.cshtml
+++ b/Views/Acceso/Login.cshtml
@@ -25,12 +25,12 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form action="@Url.Action("LoginAccess","Acceso")" method="post">
-						@* <div class="input-group mb-3">
+						 <div class="input-group mb-3">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 							</div>
-							<input type="text" name="Correo" class="form-control input_user" value="" placeholder="Usuario">
-						</div> *@
+							<input type="text" name="Correo" class="form-control input_user" value="" placeholder="Correo">
+						</div> 
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
@@ -38,9 +38,9 @@
 							<input type="text" name="Clave" class="form-control input_pass" value="" placeholder="Codigo de Alumno(a)">
 							
 						</div>
-						@if (@usarionovalido == true)
+						@if (usarionovalido != null)
 						{
-							<p>Usuario no encontrado</p>
+						<p>@ViewBag.Mensaje</p>
 						}
 						<div class="d-flex justify-content-center mt-3 login_container">
 							<button type="submit" name="button" class="btn login_btn">Iniciar</button>
