Creacion de flex para imagenes de la cabecera de la vista boletin

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,36 +5,39 @@
     var promedio = Math.Round(Convert.ToDecimal(suma) / Model.Where(x => x.CodigoCategoria != 0).Count(), 2);
 }
 
-<div class="container">
     <div class="card">
-        <div class="card-header text-center">
-            <h2>CENTRO ESCOLAR LA RECOLECCION</h2>
+        <div class="d-flex justify-content-center text-center">
+        <div background-color: yellow;"><img src="~/lib/insig.png" /></div>
+        <div  background-color: red;"> <h2>CENTRO ESCOLAR LA RECOLECCION</h2>
             <h3>1880 22 DE NOVIEMBRE - 2023</h3>
             <h3>BOLETIN</h3>
             <h5>AÑO LECTIVO @Model[0].AñoLectivo</h5>
         </div>
+        <div><img src="~/lib/untitled.png" /><img src="~/lib/sv.png" /> </div>
+        
+    </div>
         <div class="card-body">
             <div class="row">
                 <div class="col col-4">
                     <b> CODIGO: </b>@Model[0].CodigoAlumna
                 </div>
-                <div class="col col-4">
-                    ALUMNA: @Model[0].Alumnas
+                <div class="col col-4" style="text-align:center;">
+                    <b>ALUMNA:</b> @Model[0].Alumnas
                 </div>
-                <div class="col col-4">
-                    GRADO: @Model[0].Grado
+                <div class="col col-4" style="text-align:right;">
+                    <b>GRADO: </b> @Model[0].Grado
                 </div>
             </div>
             <div class="row">
                 <div class="col col-6">
-                    PROFESOR GUIA: @Model[0].ProfesorGuia
+                    <b>PROFESOR GUIA: </b>@Model[0].ProfesorGuia
                 </div>
-                <div class="col col-6" style="text-align:right;">
-                    SECCION: @Model[0].Aula
+                <div class="col col-6" style="text-align:right; padding-right:50px ">
+                    <b>SECCION:</b> @Model[0].Aula
                 </div>
             </div>
             <div class="row">
-                <table>
+                <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th>
@@ -100,4 +103,3 @@
             </div>
         </div>
     </div>
-</div>
