--- a/Views/Acceso/Login.cshtml
+++ b/Views/Acceso/Login.cshtml
@@ -40,20 +40,8 @@
 						}
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"> <i class="fa-solid fa-calendar-day"></i></span>
-                                <select name="AnioEscolar" class="form-select" aria-label="Default select example">
-									<option selected>Seleccione el Año Escolar</option>
-									@foreach (var item in Model)
-									{
-										<option value="@item">@item</option>
-									}
-								</select>
-							</div>
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
 								<span class="input-group-text"> <i class="fa-solid fa-clipboard"></i></span>
-								<select name="Bimensual" class="form-select" aria-label="Default select example">
+								<select name="Bimensual"  id="Bimen" class="form-select" aria-label="Default select example">
 									<option selected>Seleccione el Bimensual</option>
 									<option value="IB">IB</option>
 									<option value="IIB">IIB</option>
